--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -10,15 +10,17 @@ jobs:
     name: Update waka-time stats
     runs-on: ubuntu-latest
     steps:
-      - uses: piekarskipiotr/piekarskipiotr@master
-      with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: FALSE
-          SHOW_OS: FALSE
-          SHOW_PROJECTS: FALSE
-          SHOW_TIMEZONE: FALSE
-          SHOW_EDITORS: FALSE
-          SHOW_LANGUAGE_PER_REPO: FALSE
-          SHOW_SHORT_INFO: FALSE
-          SHOW_LOC_CHART: FALSE
+      - uses: piekarskipiotr/piekarskipiotr@main
+        with:
+            WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+            GH_TOKEN: ${{ secrets.GH_TOKEN }}
+            SHOW_LANGUAGE: FALSE
+            SHOW_OS: FALSE
+            SHOW_PROJECTS: FALSE
+            SHOW_TIMEZONE: FALSE
+            SHOW_EDITORS: FALSE
+            SHOW_LANGUAGE_PER_REPO: FALSE
+            SHOW_SHORT_INFO: FALSE
+            SHOW_LOC_CHART: FALSE
+          
+              
