--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -10,7 +10,7 @@ jobs:
     name: Update waka-time stats
     runs-on: ubuntu-latest
     steps:
-      - uses: piekarskipiotr/piekarskipiotr@main
+      - uses: athul/waka-readme@master
         with:
             WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
