--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -10,7 +10,8 @@ jobs:
     name: Update waka-time stats
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - name: Profile Readme Development Stats
+        uses: anmol098/waka-readme-stats@V3
         with:
             WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
