--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -14,7 +14,7 @@ jobs:
         uses: anmol098/waka-readme-stats@V3
         with:
             WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-            GH_TOKEN: ${{ secrets.GH_TOKEN }}
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             SHOW_LANGUAGE: FALSE
             SHOW_OS: FALSE
             SHOW_PROJECTS: FALSE
