--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,17 +1,15 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
-
+  workflow_dispatch:
 jobs:
   update-readme:
     name: Update waka-time stats
     runs-on: ubuntu-latest
     steps:
-      - name: Profile Readme Development Stats
-        uses: anmol098/waka-readme-stats@V3
+      - uses: anmol098/waka-readme-stats@master
         with:
             WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
